# system-settings-app

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh  meson.build  replace_network  replace_network.rs  run-tests.sh  test_style.rs  test_wifi  test_wifi.rs  test_wifi2  test_wifi2.rs
assets/: omarchy-settings.desktop
data/: system-settings.desktop
src/: app.c  app.h  app.rs  error.rs  main.c  main.rs  style.css  theme.rs  window.c  window.h
src/backend/: audio.rs  bluetooth.rs  config.rs  display.rs  hyprland.rs  mod.rs  network.rs  notifications.rs  power.rs  screentime.rs  security.rs  system.rs  waybar.rs
src/pages/: page-accessibility.c  page-accessibility.h  page-ai.c  page-ai.h  page-app-permissions.c  page-app-permissions.h  page-appearance.c  page-appearance.h  page-battery.c  page-battery.h  page-bluetooth.c  page-bluetooth.h  page-boot.c  page-boot.h  page-clipboard.h  page-defaultapps.c  page-defaultapps.h  page-displays.c  page-displays.h  page-docker.c  page-docker.h  page-encryption.c  page-encryption.h  page-filetools.c  page-filetools.h  page-fingerprint.c  page-fingerprint.h  page-firewall.c  page-firewall.h  page-focus.c  page-focus.h  page-fonts.c  page-fonts.h  page-gamemode.c  page-gamemode.h  page-general.c  page-general.h  page-github.c  page-github.h  page-gpg.c  (+89 more)
src/ui/: homepage.rs  icons.rs  mod.rs  sidebar.rs  topbar.rs
src/ui/pages/: about.rs  appearance.rs  audio.rs  bluetooth.rs  date_time.rs  display.rs  focus.rs  game_mode.rs  hotspot.rs  keybinds.rs  language_region.rs  mod.rs  network.rs  notifications.rs  power.rs  screentime.rs  security.rs  software_update.rs  startup.rs  storage.rs  system.rs  touchpad_mouse.rs  wallpaper.rs  waybar.rs
src/utils/: config-parser.c  config-parser.h  subprocess.c  subprocess.h  tool-detector.c  tool-detector.h
tests/: test_main.c
