[package]
name = "hyprland-settings"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio", "svg", "canvas", "image"] }
hyprland = "0.4.0-beta.3"
zbus = { version = "4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
toml = "0.8"
thiserror = "1"
futures = "0.3"
once_cell = "1.19"
